--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -2,8 +2,7 @@
 name: Super-Linter
 
 # Run this workflow every time a new commit pushed to your repository
-#on: [push, pull_request]
-on: push
+on: [push, pull_request]
 
 jobs:
   # Set the job key. The key is displayed as the job name
