--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -8,6 +8,7 @@ jobs:
   # Set the job key. The key is displayed as the job name
   # when a job name is not provided
   super-lint:
+    if: github.event_name == 'push' || github.event.pull_request.head.repo.full_name != github.repository
     # Name the Job
     name: Lint code base
     # Set the type of machine to run on
